correção de bug na criação de primeiro emprestimo.

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,4 @@ hs_err_pid*
 
 # Arquivos de configuração:
 .settings/org.eclipse.wst.common.project.facet.core.xml
-
+src/br/com/episteme/dao/DataSource.java
